Fixed problems v2